# gfe-devices-grabber

./: .gitignore  README.md  pyproject.toml
.github/workflows/: release.yml
src/: gfe-devices-grabber.spec
src/gfe_devices_grabber/: automation.py  main.py  report.py  ui.py  utils.py
tests/: test_utils.py
