[tool.poetry]
name = "gfe-devices-grabber"
version = "0.1.0"
description = ""
authors = ["B7W <b7w@isudo.ru>"]
readme = "README.md"
packages = [{include = "gfe_devices_grabber", from = "src"}]

[tool.poetry.dependencies]
python = ">=3.11,<3.12"
openpyxl = "^3.0.10"
pywinauto = {version = "^0.6.8", platform = "win32"}


[tool.poetry.group.dev.dependencies]
pyinstaller = "^5.7.0"
pytest = "^7.2.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
